--- a/ToDoList/Base.lproj/Main.storyboard
+++ b/ToDoList/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="bTc-LY-2Gt" id="PuK-lU-4Qn"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="To Do List" id="GZK-L4-qB3"/>
+                    <navigationItem key="navigationItem" title="To Do List" id="GZK-L4-qB3">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="gAn-xL-uoJ">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="bTc-LY-2Gt" id="jc0-4i-Ss3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9k-En-wnq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
