--- a/ToDoList/Views/Base.lproj/LaunchScreen.storyboard
+++ b/ToDoList/Views/Base.lproj/LaunchScreen.storyboard
@@ -18,26 +18,23 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="BMK-jY-yFs">
-                                <rect key="frame" x="0.0" y="17" width="414" height="862"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="Nab-6s-hYm">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Edb-uC-TOj">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                            </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ACI-LABLOGONewRound-V1.png" translatesAutoresizingMaskIntoConstraints="NO" id="gs2-ln-olN">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="ACI-LABLOGONewRound-V1.png" translatesAutoresizingMaskIntoConstraints="NO" id="kOe-ns-pdQ">
                                 <rect key="frame" x="57" y="298" width="300" height="300"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Edb-uC-TOj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="111-Pp-jiS"/>
-                            <constraint firstItem="Edb-uC-TOj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="SLb-cX-pmq"/>
-                            <constraint firstItem="Edb-uC-TOj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="W6R-We-7TU"/>
-                            <constraint firstItem="Edb-uC-TOj" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="atI-kR-ryT"/>
-                            <constraint firstAttribute="bottom" secondItem="Edb-uC-TOj" secondAttribute="bottom" id="qbu-8X-zWl"/>
-                            <constraint firstItem="Edb-uC-TOj" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="qwQ-AQ-8EV"/>
+                            <constraint firstItem="Nab-6s-hYm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="86B-7O-zv0"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Nab-6s-hYm" secondAttribute="bottom" id="TKh-98-cgI"/>
+                            <constraint firstItem="Nab-6s-hYm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="Tek-7m-5U7"/>
+                            <constraint firstItem="Nab-6s-hYm" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="XH4-VF-UXA"/>
+                            <constraint firstItem="Nab-6s-hYm" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="iRu-kB-O2U"/>
+                            <constraint firstItem="Nab-6s-hYm" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="mSq-ZQ-JNR"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Nab-6s-hYm" secondAttribute="trailing" id="pcD-ce-K7u"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -49,6 +46,6 @@
     </scenes>
     <resources>
         <image name="ACI-LABLOGONewRound-V1.png" width="726" height="684"/>
-        <image name="Image" width="16" height="16"/>
+        <image name="background.jpg" width="500" height="755"/>
     </resources>
 </document>
