--- a/ToDoList/Views/Base.lproj/Main.storyboard
+++ b/ToDoList/Views/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Items-->
+        <!--To Do List View Controller-->
         <scene sceneID="SLK-Cr-Xhp">
             <objects>
                 <tableViewController id="bTc-LY-2Gt" customClass="ToDoListViewController" customModule="ToDoList" customModuleProvider="target" sceneMemberID="viewController">
@@ -41,14 +41,16 @@
                             <outlet property="delegate" destination="bTc-LY-2Gt" id="PuK-lU-4Qn"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Items" id="GZK-L4-qB3">
+                    <navigationItem key="navigationItem" id="GZK-L4-qB3">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="gAn-xL-uoJ">
-                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
                                 <action selector="addButtonPressed:" destination="bTc-LY-2Gt" id="jc0-4i-Ss3"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchBar" destination="acV-UR-mW3" id="EtC-4f-R7W"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9k-En-wnq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -59,10 +61,10 @@
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="PCt-iH-fNK" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yme-ZV-nNv">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="yme-ZV-nNv">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.15686274510000001" green="0.66666666669999997" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="barTintColor" red="0.11372549019607843" green="0.60784313725490191" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
                             <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="30"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
